ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ingress-gke-webapp"
    networking.gke.io/managed-certificates: django-app-cert
    networking.gke.io/v1beta1.FrontendConfig: "django-frontend-config"
spec:
  defaultBackend:
    service:
      name: django-python-hello-world-external
      port:
        number: 8080
